--- a/front/intercity.css
+++ b/front/intercity.css
@@ -44,29 +44,53 @@ html, body {
     margin-left: 2%;
 }
 
+.chosen-link {
+    border: 2px solid #393939;
+    border-radius: 20px;
+    padding: 0.5em;
+}
+
+
 .content {
-    height: 82vh;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    
+    margin-top: 4%;
+    gap: 6%;
+}
+
+.content-object {
+    width: 150px;
+    height: 80px;
+    border: 3px solid;
+    border-radius: 20px;
+    border-image-slice: 1;
+    padding: 1em;
+    border-image-source: linear-gradient(to bottom , #F39F86, #F9D796);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .content-txt {
     color: whitesmoke;
+
 }
 
-.content-li {
-    font-size: x-large;
+#cities, #date {
+    border-radius: 20px;
+    padding: 0.4em;
 }
 
-.content-text {
-    display: flex;
-    flex-direction: column;
-    /* justify-content: center; */
-    align-items: center;
+#content-btn {
+    border-radius: 10px;
+    font-size: larger;
+    padding: 0.3em;
+    background-image: linear-gradient(to bottom right,  #F9D796, #F39F86);
+    color: #393939;
+    font-weight: 600;
 }
 
-ul {
-    list-style: circle;
+#content-btn:hover{
+    cursor: pointer;
 }
