--- a/assets/styles/register.css
+++ b/assets/styles/register.css
@@ -43,3 +43,76 @@ html, body {
     gap: 15px;
     margin-left: 2%;
 }
+
+.link {
+    text-decoration: none;
+    font-size: larger;
+    color: whitesmoke;
+    padding: 10px;
+}
+
+.link:hover {
+    text-decoration: underline;;
+}
+
+.chosen {
+    border: 1px solid whitesmoke;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+    justify-content: center;
+    /* height: 70vh; */
+}
+
+.links {
+    margin-bottom: 20px;
+}
+
+.login-form {
+    margin-top: 30px;
+}
+
+fieldset{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    flex-wrap: wrap;
+}
+
+.inp-tag {
+    color: whitesmoke;
+    font-size: large;
+}
+
+.inp {
+    font-size: large;
+}
+
+.inp-btn {
+    margin-top: 20px;
+    border: none;
+    font-size: larger;
+    border-radius: 10px;
+    padding: 7px;
+    font-weight: 600;
+    background-image: linear-gradient(to bottom right, #F9D796, #F39F86);
+
+}
+
+.inp-pair {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.inp-btn:hover {
+    cursor: pointer;
+}
+
+h4 {
+    color: whitesmoke;
+}
