--- a/assets/styles/intercity.css
+++ b/assets/styles/intercity.css
@@ -51,9 +51,17 @@ html, body {
 }
 
 
-.content {
+form {
     display: flex;
     justify-content: center;
+    align-items: center;
+    margin-top: 4%;
+    gap: 6%;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     margin-top: 4%;
     gap: 6%;
@@ -62,11 +70,9 @@ html, body {
 .content-object {
     width: 150px;
     height: 80px;
-    border: 3px solid;
+    border: 3px solid whitesmoke;
     border-radius: 20px;
-    border-image-slice: 1;
     padding: 1em;
-    border-image-source: linear-gradient(to bottom , #F39F86, #F9D796);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -82,15 +88,39 @@ html, body {
     padding: 0.4em;
 }
 
-#content-btn {
+.content-btn {
+    /* margin-top: 20px; */
+    border: none;
+    font-size: x-large;
     border-radius: 10px;
-    font-size: larger;
-    padding: 0.3em;
-    background-image: linear-gradient(to bottom right,  #F9D796, #F39F86);
-    color: #393939;
+    padding: 7px;
     font-weight: 600;
+    background-image: linear-gradient(to bottom right, #F9D796, #F39F86);
+
 }
 
-#content-btn:hover{
+.buy-btn {
+    border: none;
+    font-size: large;
+    border-radius: 5px;
+    padding: 4px;
+    font-weight: 500;
+    background-image: linear-gradient(to bottom right, #F9D796, #F39F86);
+
+}
+
+.content-btn:hover, .buy-btn:hover{
     cursor: pointer;
+}
+
+.ticket-object {
+    width: 40vw;
+    margin: 1%;
+    padding: 0.5%;
+    display: flex;
+    border: 2px solid whitesmoke;
+    color: whitesmoke;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 20px;
 }
